--- a/shop/templates/shop/product_page.html
+++ b/shop/templates/shop/product_page.html
@@ -14,185 +14,15 @@
                     <!-- PRODUCT SLIDER-->
                     {% include 'shop/components/_product_slider.html' %}
                 </div>
-
                 <!-- PRODUCT DETAILS-->
-                <div class="col-lg-6">
-                    <ul class="list-inline mb-2 text-sm">
-                        <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
-                        <li class="list-inline-item m-0 1"><i class="fas fa-star small text-warning"></i></li>
-                        <li class="list-inline-item m-0 2"><i class="fas fa-star small text-warning"></i></li>
-                        <li class="list-inline-item m-0 3"><i class="fas fa-star small text-warning"></i></li>
-                        <li class="list-inline-item m-0 4"><i class="fas fa-star small text-warning"></i></li>
-                    </ul>
-                    <h1>Смарт часы Apple Watch Series 8 45 mm Red</h1>
-                    <p class="text-muted lead">$950,0</p>
-                    <p class="text-sm mb-4">Тип - умные часы
-                        Совместимость с ОС - iOS
-                        Материал корпуса - алюминий
-                        Материал браслета/ремешка - силикон
-                        Влагозащита - WR50</p>
-                    <div class="row align-items-stretch mb-4">
-                        <div class="col-sm-3 pl-sm-0"><a
-                                class="btn btn-dark btn-sm btn-block h-100 d-flex align-items-center justify-content-center px-0"
-                                href="/ru/to_cart/2/add/">Добавить в корзину</a></div>
-                    </div>
-
-
-                    <a class="text-dark p-0 mb-4 d-inline-block"
-                       href="/ru/add_favorite/smart-chasy-apple-watch-series-8-45-mm-red/"><i
-                            class="far fa-heart me-2"></i>Добавить в избранное</a><br>
-
-
-                    <ul class="list-unstyled small d-inline-block">
-                        <li class="px-3 py-2 mb-1 bg-white"><strong class="text-uppercase">В наличии:</strong><span
-                                class="ms-2 text-muted">37 шт.</span></li>
-                        <li class="px-3 py-2 mb-1 bg-white text-muted"><strong class="text-uppercase text-dark">Категория:</strong><a
-                                class="reset-anchor ms-2" href="#!">Смарт часы</a></li>
-                        <li class="px-3 py-2 mb-1 bg-white text-muted"><strong
-                                class="text-uppercase text-dark">Размер:</strong><a class="reset-anchor ms-2" href="#!">45</a>
-                        </li>
-                    </ul>
-                </div>
-
+                {% include 'shop/components/_product_detail.html' %}
             </div>
+
             <!-- DETAILS TABS-->
-
-
-            <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
-                <li class="nav-item"><a class="nav-link text-uppercase active" id="description-tab" data-bs-toggle="tab"
-                                        href="#description" role="tab" aria-controls="description" aria-selected="true">Дополнительно</a>
-                </li>
-                <li class="nav-item"><a class="nav-link text-uppercase" id="reviews-tab" data-bs-toggle="tab"
-                                        href="#reviews" role="tab" aria-controls="reviews"
-                                        aria-selected="false">Отзывы</a></li>
-            </ul>
-            <div class="tab-content mb-5" id="myTabContent">
-                <div class="tab-pane fade show active" id="description" role="tabpanel"
-                     aria-labelledby="description-tab">
-                    <div class="p-4 p-lg-5 bg-white">
-                        <h6 class="text-uppercase">Описание товара</h6>
-                        <p class="text-muted text-sm mb-0">Смарт часы Apple Watch Series 8 45 mm Red
-                            Смарт часы Apple Watch Series 8 – это инновационное устройство, оснащенное множеством
-                            преимуществом, одной из которых является сенсорный дисплей, отображающий качественные
-                            изображения с яркой цветопередачей. Данная модель оснащена емким аккумулятором, позволяющий
-                            работать длительное время без подзарядки. К тому же, часы оснащены водонепроницаемой
-                            конструкцией, поэтому вы можете спокойно купаться в них в душе, ванной или бассейне. Более
-                            того, благодаря беспроводному модулю Bluetooth вы сможете подключить к устройству свой
-                            смартфон или планшет. Такая технология позволяет отображать звонки и сообщения на часах, что
-                            очень удобно, например, когда телефон находится в другой комнате.
-                            Купить смарт часы Apple Watch Series 8 45 mm Red вы можете в нашем интернет-магазине
-                            *Характеристики и комплектация могут быть изменены фирмой-производителем без
-                            предварительного уведомления</p>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                    <div class="p-4 p-lg-5 bg-white">
-                        <div class="row">
-                            <div class="col-lg-8">
-                                <div class="d-flex mb-3">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="img/customer-1.png"
-                                                                    alt="" width="50"></div>
-
-
-                                    <div class="container">
-                                        <h6 class="text-center">
-                                            Отзыв могут оставить только зарегистрированные пользователи
-                                            <a href="/ru/login_registration/">Войти</a>
-                                        </h6>
-                                    </div>
-
-                                </div>
-
-                                <div class="ms-3 flex-shrink-1">
-                                    <h6 class="mb-0 text-uppercase">khasan</h6>
-                                    <p class="small text-muted mb-0 text-uppercase">22 июля 2023 г.</p>
-                                    <ul class="list-inline mb-1 text-xs">
-                                        <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                                        <li class="list-inline-item m-0"><i
-                                                class="fas fa-star-half-alt text-warning"></i></li>
-                                    </ul>
-                                    <p class="text-sm mb-0 text-muted">qqqqqq</p>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'shop/components/_product_description_tabs.html' %}
 
             <!-- RELATED PRODUCTS-->
-            <h2 class="h5 text-uppercase mb-4">Похожие товары</h2>
-            <div class="row">
-                <!-- PRODUCT-->
-
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="product text-center">
-                        <div class="mb-3 position-relative">
-                            <div class="badge text-white bg-"></div>
-                            <a class="d-block" href="/ru/product/vyayva/"><img class="img-fluid w-100"
-                                                                               src="https://www.raumplus.ru/upload/iblock/545/Skoro-zdes-budet-foto.jpg"
-                                                                               alt="..."></a>
-                            <div class="product-overlay">
-                                <ul class="mb-0 list-inline">
-
-
-                                    <li class="list-inline-item m-0 p-0">
-                                        <a class="btn btn-sm btn-outline-dark" href="/ru/add_favorite/vyayva/">
-                                            <i class="far fa-heart"></i>
-                                        </a>
-                                    </li>
-
-
-                                    <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                            href="/ru/to_cart/20/add/">Добавить в
-                                        корзину</a></li>
-                                    <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                                </ul>
-                            </div>
-                        </div>
-                        <h6><a class="reset-anchor" href="detail.html">выаыва</a></h6>
-                        <p class="small text-muted">$12,0</p>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="product text-center">
-                        <div class="mb-3 position-relative">
-                            <div class="badge text-white bg-"></div>
-                            <a class="d-block" href="/ru/product/smart-chasy-canyon-lollypop-cns-sw63bb/"><img
-                                    class="img-fluid w-100" src="/media/products/CNS-SW63BB.jpg" alt="..."></a>
-                            <div class="product-overlay">
-                                <ul class="mb-0 list-inline">
-
-
-                                    <li class="list-inline-item m-0 p-0">
-                                        <a class="btn btn-sm btn-outline-dark"
-                                           href="/ru/add_favorite/smart-chasy-canyon-lollypop-cns-sw63bb/">
-                                            <i class="far fa-heart"></i>
-                                        </a>
-                                    </li>
-
-
-                                    <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                            href="/ru/to_cart/4/add/">Добавить в
-                                        корзину</a></li>
-                                    <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                                </ul>
-                            </div>
-                        </div>
-                        <h6><a class="reset-anchor" href="detail.html">Смарт-часы Canyon Lollypop CNS-SW63BB</a></h6>
-                        <p class="small text-muted">$30,0</p>
-                    </div>
-                </div>
-
-            </div>
-
-
+            {% include 'shop/components/_related_products.html' %}
         </div>
     </section>
 
